z-index on top, fix unclickable button on code section

--- a/index.css
+++ b/index.css
@@ -273,6 +273,7 @@ nav {
     position: absolute;
     bottom: 0;
     right: 0;
+    z-index: 100;
 
 }
 
